tests/errors/array-size-mismatch.ja
procedure foo(int x[3])
    skip

procedure main()
    int x[4]
    call foo(x)
